Fix: Make sure all carousel elements performs correctly and does not overflows the container in Column and row directions [ED-6849]

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -175,10 +175,12 @@
 			flex-basis: 100%;
 		}
 
-		// Fix media carousel widget broken (ED-6796).
+		// Fix swiper-based widgets broken (ED-6849).
 		// TODO: Find a better solution.
+		&-slides,
 		&-media-carousel {
 			max-width: 100%;
+			flex-basis: 100%;
 		}
 	}
 
